{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 104,
  "lineage": "e2af1be3-6785-f60f-1e2d-61c93bf82a8f",
  "resources": [
    {
      "module": "module.platform_cache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:security-group/sg-024af072852477881",
            "description": "Access control for platform-prod-cache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024af072852477881",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Lambda access to Redis TLS port",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bf432d4c423f67d"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "platform-prod-cache-sg",
            "name_prefix": "",
            "owner_id": "869603330574",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cache",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-cache-sg",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "tags_all": {
              "Component": "cache",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-cache-sg",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "sg-024af072852477881",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this",
            "module.platform_security_groups.aws_security_group.lambda"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0891d8e572812125b",
            "arn": "arn:aws:ec2:eu-central-1:869603330574:elastic-ip/eipalloc-0891d8e572812125b",
            "association_id": "eipassoc-0c0273d011c7a2ef9",
            "domain": "vpc",
            "id": "eipalloc-0891d8e572812125b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0afd775afa1ac2d34",
            "private_dns": "ip-10-30-1-103.eu-central-1.compute.internal",
            "private_ip": "10.30.1.103",
            "public_dns": "ec2-63-179-180-174.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.179.180.174",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-nat-eip",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "tags_all": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-nat-eip",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:internet-gateway/igw-0a8cf4e757209969d",
            "id": "igw-0a8cf4e757209969d",
            "owner_id": "869603330574",
            "region": "eu-central-1",
            "tags": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-igw",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "tags_all": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-igw",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0891d8e572812125b",
            "association_id": "eipassoc-0c0273d011c7a2ef9",
            "connectivity_type": "public",
            "id": "nat-0fe3cabf9729dcbb9",
            "network_interface_id": "eni-0afd775afa1ac2d34",
            "private_ip": "10.30.1.103",
            "public_ip": "63.179.180.174",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03285e4e893d6b4cc",
            "tags": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-nat",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "tags_all": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-nat",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.platform_network.aws_eip.nat",
            "module.platform_network.aws_internet_gateway.this",
            "module.platform_network.aws_subnet.public",
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e612e1b2b957b69a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fe3cabf9729dcbb9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0e612e1b2b957b69a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0e612e1b2b957b69a"
          },
          "dependencies": [
            "module.platform_network.aws_eip.nat",
            "module.platform_network.aws_internet_gateway.this",
            "module.platform_network.aws_nat_gateway.this",
            "module.platform_network.aws_route_table.private",
            "module.platform_network.aws_subnet.public",
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a8cf4e757209969d",
            "id": "r-rtb-08a010ff6df8210f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-08a010ff6df8210f8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-08a010ff6df8210f8"
          },
          "dependencies": [
            "module.platform_network.aws_internet_gateway.this",
            "module.platform_network.aws_route_table.public",
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:route-table/rtb-0e612e1b2b957b69a",
            "id": "rtb-0e612e1b2b957b69a",
            "owner_id": "869603330574",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fe3cabf9729dcbb9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-private-rt",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "private"
            },
            "tags_all": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-private-rt",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "rtb-0e612e1b2b957b69a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:route-table/rtb-08a010ff6df8210f8",
            "id": "rtb-08a010ff6df8210f8",
            "owner_id": "869603330574",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8cf4e757209969d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-public-rt",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "public"
            },
            "tags_all": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-public-rt",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "rtb-08a010ff6df8210f8",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1c29936e7cf5894",
            "region": "eu-central-1",
            "route_table_id": "rtb-0e612e1b2b957b69a",
            "subnet_id": "subnet-05749cf7d39e9ea78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.platform_network.aws_route_table.private",
            "module.platform_network.aws_subnet.private",
            "module.platform_network.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039335861f0fe1508",
            "region": "eu-central-1",
            "route_table_id": "rtb-0e612e1b2b957b69a",
            "subnet_id": "subnet-0dc83583337c45c03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.platform_network.aws_route_table.private",
            "module.platform_network.aws_subnet.private",
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bccfee65adab8cf8",
            "region": "eu-central-1",
            "route_table_id": "rtb-08a010ff6df8210f8",
            "subnet_id": "subnet-03285e4e893d6b4cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.platform_network.aws_route_table.public",
            "module.platform_network.aws_subnet.public",
            "module.platform_network.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0261a1632246896c5",
            "region": "eu-central-1",
            "route_table_id": "rtb-08a010ff6df8210f8",
            "subnet_id": "subnet-0123b36571ff1b2f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.platform_network.aws_route_table.public",
            "module.platform_network.aws_subnet.public",
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:subnet/subnet-05749cf7d39e9ea78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05749cf7d39e9ea78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869603330574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-private-a",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "private"
            },
            "tags_all": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-private-a",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "private"
            },
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "subnet-05749cf7d39e9ea78",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:subnet/subnet-0dc83583337c45c03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.30.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc83583337c45c03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869603330574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-private-b",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "private"
            },
            "tags_all": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-private-b",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "private"
            },
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "subnet-0dc83583337c45c03",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:subnet/subnet-03285e4e893d6b4cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03285e4e893d6b4cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869603330574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-public-a",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "public"
            },
            "tags_all": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-public-a",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "public"
            },
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "subnet-03285e4e893d6b4cc",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:subnet/subnet-0123b36571ff1b2f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0123b36571ff1b2f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869603330574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-public-b",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "public"
            },
            "tags_all": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc-public-b",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform",
              "Tier": "public"
            },
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "subnet-0123b36571ff1b2f2",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:vpc/vpc-063a9bf56877fa0f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-09ca075dfcbf617c9",
            "default_route_table_id": "rtb-0a6473eca9e8d8e11",
            "default_security_group_id": "sg-0e9e79fd0d647204d",
            "dhcp_options_id": "dopt-070f6cb11654c344f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063a9bf56877fa0f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6473eca9e8d8e11",
            "owner_id": "869603330574",
            "region": "eu-central-1",
            "tags": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "tags_all": {
              "Component": "network",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "platform-prod-vpc",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "vpc-063a9bf56877fa0f5",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "module": "module.platform_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:security-group/sg-07a6b50cb8cd3bae3",
            "description": "Public ALB ingress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a6b50cb8cd3bae3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "platform-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "869603330574",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "edge",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "Layer": "public",
              "ManagedBy": "terraform",
              "Name": "platform-prod-alb-sg",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "tags_all": {
              "Component": "edge",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "Layer": "public",
              "ManagedBy": "terraform",
              "Name": "platform-prod-alb-sg",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "sg-07a6b50cb8cd3bae3",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:security-group/sg-041070657fc5fee79",
            "description": "Internal application runtime",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041070657fc5fee79",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to application service",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a6b50cb8cd3bae3"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "platform-prod-app-sg",
            "name_prefix": "",
            "owner_id": "869603330574",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "app",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "Layer": "internal",
              "ManagedBy": "terraform",
              "Name": "platform-prod-app-sg",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "tags_all": {
              "Component": "app",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "Layer": "internal",
              "ManagedBy": "terraform",
              "Name": "platform-prod-app-sg",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "sg-041070657fc5fee79",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:security-group/sg-0bbef28fe6e7755c4",
            "description": "Aurora access controls",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbef28fe6e7755c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Application service to Aurora",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041070657fc5fee79"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Lambda to Aurora",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bf432d4c423f67d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "platform-prod-db-sg",
            "name_prefix": "",
            "owner_id": "869603330574",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "data",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "Layer": "storage",
              "ManagedBy": "terraform",
              "Name": "platform-prod-db-sg",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "tags_all": {
              "Component": "data",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "Layer": "storage",
              "ManagedBy": "terraform",
              "Name": "platform-prod-db-sg",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "sg-0bbef28fe6e7755c4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:869603330574:security-group/sg-02bf432d4c423f67d",
            "description": "Lambda runtime outbound access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bf432d4c423f67d",
            "ingress": [],
            "name": "platform-prod-lambda-sg",
            "name_prefix": "",
            "owner_id": "869603330574",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "lambda",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "Layer": "runtime",
              "ManagedBy": "terraform",
              "Name": "platform-prod-lambda-sg",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "tags_all": {
              "Component": "lambda",
              "CostCenter": "prod-platform",
              "Environment": "prod",
              "Layer": "runtime",
              "ManagedBy": "terraform",
              "Name": "platform-prod-lambda-sg",
              "Owner": "platform-team",
              "Repository": "clarivum",
              "Service": "platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-063a9bf56877fa0f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869603330574",
            "id": "sg-02bf432d4c423f67d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.platform_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to application service",
            "from_port": 3000,
            "id": "sgrule-996834668",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-041070657fc5fee79",
            "security_group_rule_id": "sgr-0251b3b2bb273cc6e",
            "self": false,
            "source_security_group_id": "sg-07a6b50cb8cd3bae3",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.platform_network.aws_vpc.this",
            "module.platform_security_groups.aws_security_group.alb",
            "module.platform_security_groups.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.platform_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Application service to Aurora",
            "from_port": 5432,
            "id": "sgrule-429756398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-0bbef28fe6e7755c4",
            "security_group_rule_id": "sgr-03b0fc13f1848771c",
            "self": false,
            "source_security_group_id": "sg-041070657fc5fee79",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.platform_network.aws_vpc.this",
            "module.platform_security_groups.aws_security_group.app",
            "module.platform_security_groups.aws_security_group.database"
          ]
        }
      ]
    },
    {
      "module": "module.platform_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Lambda to Aurora",
            "from_port": 5432,
            "id": "sgrule-273429012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-0bbef28fe6e7755c4",
            "security_group_rule_id": "sgr-0429343e1151f4604",
            "self": false,
            "source_security_group_id": "sg-02bf432d4c423f67d",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.platform_network.aws_vpc.this",
            "module.platform_security_groups.aws_security_group.database",
            "module.platform_security_groups.aws_security_group.lambda"
          ]
        }
      ]
    }
  ]
}